# Live-Strategy-Backtester

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
data/: BTCUSDT-1h-2025-07-13.csv
data_scripts/: download_trades.py  record_news.py  record_order_book.py
doc/code/: coding_standards.md  configuration_guide.md
doc/financial/: backtesting_best_practices.md  performance_measurement.md  risk_management_framework.md
doc/technical/: architecture.md  backtesting_methodology.md  performance_benchmarks.md
doc/user/: faq.md  troubleshooting.md
docs/code/: api_reference.md  coding_standards.md  deployment_guide.md
docs/financial/: risk_management_framework.md
docs/technical/: architecture.md  backtesting_methodology.md  design_patterns.md  performance_benchmarks.md
docs/user/: faq.md  strategy_development_guide.md  system_usage_tutorials.md
include/: Backtester.h  DataHandler.h  DataTypes.h  ExecutionHandler.h  HistoricCSVDataHandler.h  Performance.h  Portfolio.h  SimulatedExecutionHandler.h
include/analytics/: Analytics.cpp  Analytics.h  PerformanceForecaster.h
include/analytics/anomaly_detection/: AnomalyDetector.h
include/analytics/correlation_analysis/: CorrelationCalculator.h
include/analytics/factor_analysis/: FactorExposure.h
include/analytics/forecasting/: PerformanceForecasting.h
include/analytics/gpu/: GpuAcceleration.h
include/analytics/incremental/: IncrementalAnalysis.h
include/analytics/ml/: MLModel.h
include/analytics/regime/: RegimeDetection.h
include/config/: AppConfig.h
include/core/: Backtester.h  CustomAllocator.h  MonteCarloSimulator.h  Optimizer.h  Performance.h  Portfolio.h  WalkForwardAnalyzer.h
include/cross_asset_analysis/: CrossAssetAnalyzer.h
include/data/: DataHandler.h  DataTypes.h  DatabaseDataHandler.h  HFTDataHandler.h  HistoricCSVDataHandler.h  WebSocketDataHandler.h  zstd_utils.h
include/data/serialization/: DataSerialization.h
include/data/streaming/: StreamingDataHandler.h
include/event/: Event.h  EventQueue.h  OrderBookEvent.h  ThreadSafeQueue.h
include/execution/: Commission.h  ExecutionHandler.h  SimulatedExecutionHandler.h
include/market_microstructure/: OrderBookSimulator.h
include/multi_asset/: MultiAssetBacktester.h
include/risk/: RishManager.h  RiskManager.h  SharpeRatio.h
include/risk_management/: CircuitBreaker.h  DynamicPositionSizer.h  StressTester.h
include/strategy/: MLStrategyClassifier.h  MarketRegimeDetector.h  NewsSentimentStrategy.h  OrderBookImbalanceStrategy.h  PairTradingStrategy.h  PairsTradingStrategy.h  SimpleMovingAverageCrossover.h  Strategy.h  StrategyFactory.h
include/ui/: ConsoleUI.h
lib/mio/: mio.hpp  mio.ipp
src/: Backtester.cpp  HistoricCSVDataHandler.cpp  Performance.cpp  Portfolio.cpp  SimpleMovingAverageCrossover.cpp  main.cpp
src/analytics/: Analytics.cpp  PerformanceForecaster.cpp
src/analytics/anomaly_detection/: AnomalyDetector.cpp
src/analytics/correlation_analysis/: CorrelationCalculator.cpp
src/analytics/factor_analysis/: FactorExposure.cpp
src/analytics/forecasting/: PerformanceForecasting.cpp
src/analytics/gpu/: GpuAcceleration.cu
src/analytics/incremental/: IncrementalAnalysis.cpp
src/analytics/ml/: MLModel.cpp
src/analytics/regime/: RegimeDetection.cpp
src/config/: AppConfig.cpp
src/core/: Backtester.cpp  MonteCarloSimulator.cpp  Optimizer.cpp  Performance.cpp  Portfolio.cpp  WalkForwardAnalyzer.cpp
src/cross_asset_analysis/: CrossAssetAnalyzer.cpp
src/data/: DatabaseDataHandler.cpp  HFTDataHandler.cpp  HistoricCSVDataHandler.cpp  WebSocketDataHandler.cpp  zstd_utils.cpp
src/data/serialization/: DataSerialization.cpp
src/data/streaming/: StreamingDataHandler.cpp
src/execution/: SimulatedExecutionHandler.cpp
src/market_microstructure/: OrderBookSimulator.cpp
src/multi_asset/: MultiAssetBacktester.cpp
src/risk/: RiskManager.cpp  SharpeRatio.cpp
src/risk_management/: CircuitBreaker.cpp  DynamicPositionSizer.cpp  StressTester.cpp
src/strategy/: MLStrategyClassifier.cpp  MarketRegimeDetector.cpp  OrderBookImbalanceStrategy.cpp  PairTradingStrategy.cpp  PairsTradingStrategy.cpp  SimpleMovingAverageCrossover.cpp  StrategyFactory.cpp
src/tools/: ConfigValidator.cpp
src/ui/: ConsoleUI.cpp
test/: test_portfolio.cpp
